# accountsdb-plugin-rabbitmq

./: Cargo.toml  test_config.json
src/: account_selector.rs  accountsdb_plugin_rabbitmq.rs  lib.rs  transaction_selector.rs
