[package]
name = "accountsdb-plugin-rabbitmq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-accountsdb-plugin-interface = "1.9.4"
serde = { version = "1.0.133", features = ["derive"] }
lapin = "1.9.0"
async-global-executor = "2.0.2"
log = "0.4.14"
bs58 = "0.4.0"
serde_json = "1.0.74"